# program/application/route.go
@@ -13,10 +13,10 @@ func Route() *Application {
 	url := ginSwagger.URL("http://localhost:8080/swagger/doc.json") // The url pointing to API definition
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
 
-	router.GET("/todo", post.GetPosts)
-	router.GET("/todo/:id", post.GetPost)
-	router.POST("/todo", post.AddPost)
-	router.PUT("/todo/:id", post.UpdatePost)
-	router.DELETE("/todo/:id", post.RemovePost)
+	router.GET("/posts", post.GetPosts)
+	router.GET("/posts/:id", post.GetPost)
+	router.POST("/posts", post.AddPost)
+	router.PUT("/posts/:id", post.UpdatePost)
+	router.DELETE("/posts/:id", post.RemovePost)
 	return &Application{}
 }
