# program/docs/swagger.json
@@ -19,11 +19,10 @@
         "version": "2.0"
     },
     "host": "localhost:8080",
-    "basePath": "/",
     "paths": {
-        "/todo": {
+        "/posts": {
             "get": {
-                "description": "get the status of server.",
+                "description": "description over here",
                 "consumes": [
                     "*/*"
                 ],
@@ -31,9 +30,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "GetPosts"
+                    "Post"
                 ],
-                "summary": "Show the status of server.",
+                "summary": "/post",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -45,7 +44,7 @@
                 }
             },
             "post": {
-                "description": "get the status of server.",
+                "description": "description over here",
                 "consumes": [
                     "*/*"
                 ],
@@ -53,52 +52,39 @@
                     "application/json"
                 ],
                 "tags": [
-                    "AddPost"
+                    "Post"
                 ],
-                "summary": "Show the status of server.",
+                "summary": "/post",
+                "parameters": [
+                    {
+                        "description": "Add Post",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/inputs.PostInput"
+                        }
+                    }
+                ],
                 "responses": {
                     "202": {
                         "description": "Accepted",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "type": "object"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "get the status of server.",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "RemovePost"
-                ],
-                "summary": "Show the status of server.",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "type": "object"
                         }
                     }
                 }
             }
         },
-        "/todo/:id": {
+        "/posts/{id}": {
             "get": {
-                "description": "get the status of server.",
+                "description": "description over here",
                 "consumes": [
                     "*/*"
                 ],
@@ -106,21 +92,41 @@
                     "application/json"
                 ],
                 "tags": [
-                    "GetPost"
+                    "Post"
                 ],
-                "summary": "Show the status of server.",
+                "summary": "/post/:id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Post Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/post.Post"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
                         }
                     }
                 }
             },
             "put": {
-                "description": "get the status of server.",
+                "description": "description over here",
                 "consumes": [
                     "*/*"
                 ],
@@ -128,17 +134,115 @@
                     "application/json"
                 ],
                 "tags": [
-                    "UpdatePost"
+                    "Post"
                 ],
-                "summary": "Show the status of server.",
+                "summary": "/post/:id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Post ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update Post",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/inputs.PostInput"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "type": "object"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
                         }
                     }
+                }
+            },
+            "delete": {
+                "description": "description over here",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Post"
+                ],
+                "summary": "/post/:id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Post Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "inputs.PostInput": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "post.Post": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
                 }
             }
         }
